Update 'smu6dlcvc-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-66b77958a4.we0x.p3.openshiftapps.com/rhtap/rhtap-qe:85350a22badf9af998aedfd24962c99512e75074@sha256:31512d890f96af02a0f421f97e0b81d7055efe61629c42a304025d43f1f37557

--- a/components/smu6dlcvc-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/smu6dlcvc-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: smu6dlcvc-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-66b77958a4.we0x.p3.openshiftapps.com/rhtap/rhtap-qe:85350a22badf9af998aedfd24962c99512e75074@sha256:31512d890f96af02a0f421f97e0b81d7055efe61629c42a304025d43f1f37557
+          name: container-image
